@@ -312,7 +312,7 @@ TAO_FTEC_Event_Channel_Impl::connect_push_consumer (
 
   FtRtecEventChannelAdmin::ObjectId *oid;
 
-  if (*any >>= oid) {
+  if (any >>= oid) {
     FtRtecEventChannelAdmin::ObjectId* result;
     ACE_NEW_THROW_EX(result,
                      FtRtecEventChannelAdmin::ObjectId(*oid),
@@ -352,7 +352,7 @@ TAO_FTEC_Event_Channel_Impl::connect_push_supplier (
 
   FtRtecEventChannelAdmin::ObjectId *oid;
 
-  if (*any >>= oid) {
+  if (any >>= oid) {
     FtRtecEventChannelAdmin::ObjectId* result;
     ACE_NEW_THROW_EX(result,
                      FtRtecEventChannelAdmin::ObjectId(*oid),
